# othello_evaluator

./: .gitignore  README.md  manage.py  requirements.txt
evaluator/: board.py  bot.py  pgn.py
heuristics/: CMakeLists.txt  bitset.c  bitset.h  board.c  board.h  board_do_move.c  bot.c  bot.h  config.h  control.c  control.h  cubed.c  cubed.h  heuristics.c  macros.h  testing.c  testing.h
